--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "visitor-registration",
+  "name": "api-visitor-registration",
   "version": "0.0.1",
   "description": "",
   "author": "",
